[metadata]
name = bme680-mqtt
version = 0.0.1
author = Jörg Thalheim
author-email = joerg@thalheim.io
home-page = https://github.com/Mic92/bme680-mqtt
description = Publish BME680 sensor data to home-assistant via MQTT 
long-description = file: README.md
license = MIT
license-file = LICENSE.md
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages = find:
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    bme680-mqtt = bme680_mqtt:main

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true[wheel]
universal = 1

[pycodestyle]
max-line-length = 88
ignore = E501,E741,W503

[flake8]
max-line-length = 88
ignore = E501,E741,W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
warn_redundant_casts = true

[mypy-smbus._smbus_cffi.*]
ignore_missing_imports = True

# contains type errors
[mypy-paho.*]
ignore_missing_imports = True

[mypy-bme680_mqtt.*]
no_implicit_optional = true

[mypy-bme680.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True
